--- a/templates/login_admin.html
+++ b/templates/login_admin.html
@@ -138,7 +138,7 @@ input[type=submit]:hover {
 <h2>Login to vote or create ballots.</h2>
 
 <div class="container">
-  <form action="/view_ballots">
+  <form action="/create_ballot">
     <div class="row">
       <h2 style="text-align:center">Login with Social Media or Manually</h2>
       <div class="vl">
