--- a/templates/index.html
+++ b/templates/index.html
@@ -1,19 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>ConsensUS </title>
-    <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
-  </head>
-  <body>
-  <h1>ConsensUS</h1>
-  <p>Welcome to ConsensUS voting platform. Things you can do here:
-  <ul> 
-  <li><a href="/login">Login</a></li>
-  <li><a href="/verify">Verify</a></li>
-  </p>
-   
-    <!-- page content -->
-  </body>
+<html>
+<head>
+<style>
+.button {
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+</style>
+</head>
+<body>
+
+<img src="static\consensus_logo.png" alt="ConsensUS Logo" width="500" height="125">
+<br><strong>Quickly and easily create ballots and suerveys, vote, and see results.</strong>
+<br><br><button type="button" class="button"><a href="/login_admin">Login as a ballot creator</a></button>
+<br><br><button type="button" class="button"><a href="/login_voter">Login as a voter</a></button>
+<br><br><button type="button" class="button"><a href="/view_ballots">View results anonymously</a></button>
+
+</body>
 </html>
